# EatSmart

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: settings.py
src/eatsmart/email/: service.py
