[project]
name = "eatsmart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=23.2.1",
    "aiohttp>=3.9.0",
    "asyncio-mqtt>=0.11.1",
    "bcrypt>=4.1.2",
    "black>=23.11.0",
    "chromadb>=0.4.15",
    "click>=8.1.7",
    "colorlog>=6.8.0",
    "cryptography>=41.0.7",
    "dynaconf>=3.2.4",
    "email-validator>=2.1.0",
    "faiss-cpu>=1.7.4",
    "fastapi>=0.104.0",
    "flake8>=6.1.0",
    "httpx>=0.25.0",
    "isort>=5.12.0",
    "jinja2>=3.1.2",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-groq>=0.3.8",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.6.7",
    "mcp>=1.0.0",
    "mypy>=1.7.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "orjson>=3.9.10",
    "pandas>=2.1.0",
    "pillow>=10.1.0",
    "pre-commit>=3.6.0",
    "psutil>=5.9.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "pytz>=2023.3",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "requests-cache>=1.1.0",
    "rich>=13.7.0",
    "sendgrid>=6.10.0",
    "sentence-transformers>=2.2.2",
    "sqlalchemy>=2.0.23",
    "structlog>=23.2.0",
    "tabulate>=0.9.0",
    "tenacity>=8.2.3",
    "tqdm>=4.66.0",
    "typing-extensions>=4.8.0",
    "uvicorn[standard]>=0.24.0",
]
